--- a/app/vmui/packages/vmui/src/pages/ExploreLogs/GroupLogs/style.scss
+++ b/app/vmui/packages/vmui/src/pages/ExploreLogs/GroupLogs/style.scss
@@ -1,5 +1,7 @@
 @use "src/styles/variables" as *;
 
+$font-size-logs: var(--font-size-logs, $font-size-small);
+
 .vm-group-logs {
   margin-top: calc(-1 * $padding-medium);
 
@@ -19,22 +21,44 @@
   }
 
   &-section {
+    border-bottom: $border-divider;
+
     &-keys {
+      position: relative;
       display: flex;
       align-items: center;
       flex-wrap: wrap;
       gap: $padding-small;
-      border-bottom: $border-divider;
-      padding: $padding-small 0;
+      padding: $padding-small 120px $padding-small 0;
+      font-size: $font-size-logs;
+
+      &_compact {
+        flex-wrap: nowrap;
+        overflow: hidden;
+      }
+
+      &_popper {
+        display: flex;
+        flex-wrap: nowrap;
+        flex-direction: column;
+        align-items: flex-start;
+        justify-content: flex-start;
+        padding: $padding-global;
+        max-height: 400px;
+        overflow: auto;
+      }
 
       &__title {
         font-weight: bold;
+        white-space: nowrap;
 
         code {
           font-family: monospace;
+
           &:before {
             content: "\"";
           }
+
           &:after {
             content: "\"";
           }
@@ -42,19 +66,35 @@
       }
 
       &__count {
+        position: absolute;
+        top: auto;
+        right: 0;
         flex-grow: 1;
         text-align: right;
-        font-size: $font-size-small;
+        font-size: $font-size-logs;
         color: $color-text-secondary;
         padding-right: calc($padding-large * 3);
       }
 
       &__pair {
+        order: 0;
         padding: calc($padding-global / 2) $padding-global;
         background-color: lighten($color-tropical-blue, 6%);
         color: darken($color-dodger-blue, 20%);
         border-radius: $border-radius-medium;
         transition: background-color 0.3s ease-in, transform 0.1s ease-in, opacity 0.3s ease-in;
+        white-space: nowrap;
+
+        &_hide {
+          order: 2;
+          visibility: hidden;
+          opacity: 0;
+          pointer-events: none;
+        }
+
+        &_more {
+          order: 1;
+        }
 
         &:hover {
           background-color: $color-tropical-blue;
@@ -84,13 +124,19 @@
 
   &-row {
     position: relative;
-    border-bottom: $border-divider;
+
+    &:last-child {
+      margin-bottom: $padding-small;
+    }
 
     &-content {
       position: relative;
       display: grid;
-      grid-template-columns: auto minmax(180px, max-content) 1fr;
-      padding: $padding-global 0;
+      grid-template-columns: auto max-content 1fr;
+      padding: calc($padding-small / 4) 0;
+      font-size: $font-size-logs;
+      font-variant-numeric: tabular-nums;
+      line-height: 1.3;
       cursor: pointer;
       transition: background-color 0.2s ease-in;
 
@@ -116,8 +162,7 @@
         display: flex;
         align-items: flex-start;
         justify-content: flex-end;
-        margin-right: $padding-small;
-        line-height: 1;
+        padding: 0 $padding-global 0 $padding-small;
         white-space: nowrap;
 
         &_missing {
@@ -130,7 +175,12 @@
       &__msg {
         font-family: $font-family-monospace;
         overflow-wrap: anywhere;
-        line-height: 1.1;
+
+        &_single-line {
+          overflow: hidden;
+          text-overflow: ellipsis;
+          white-space: nowrap;
+        }
 
         &_empty-msg {
           overflow: hidden;
@@ -158,7 +208,7 @@
           border-radius: $border-radius-small;
           tab-size: 4;
           font-variant-ligatures: none;
-          margin: calc($padding-small/4) 0;
+          margin: calc($padding-small / 4) 0;
         }
 
         p {
@@ -171,7 +221,7 @@
         }
 
         code {
-          font-size: $font-size-small;
+          font-size: $font-size-logs;
           padding: calc($padding-small / 4) calc($padding-small / 2);
         }
 
@@ -194,25 +244,35 @@
 
         blockquote {
           border-left: 4px solid $color-hover-black;
-          margin: calc($padding-small/2) $padding-small;
-          padding: calc($padding-small/2) $padding-small;
+          margin: calc($padding-small / 2) $padding-small;
+          padding: calc($padding-small / 2) $padding-small;
         }
 
         ul, ol {
           list-style-position: inside;
         }
+
         /* end styles for markdown */
+      }
+
+      &__sub-msg {
+        padding-right: $padding-global;
       }
     }
 
     &-fields {
+      position: relative;
       grid-row: 2;
       padding: $padding-small 0;
-      margin-bottom: $padding-small;
+      margin: $padding-small 0 $padding-small calc($padding-global * 2);
       border: $border-divider;
       border-radius: $border-radius-small;
       overflow: auto;
-      max-height: 300px;
+      height: 300px;
+      resize: vertical;
+      font-family: $font-family-monospace;
+      font-size: $font-size-logs;
+      font-variant-numeric: tabular-nums;
 
       &-item {
         border-radius: $border-radius-small;
@@ -223,19 +283,26 @@
         }
 
         &-controls {
-          padding: 0;
+          padding: 0 calc($padding-small / 2);
 
           &__wrapper {
             display: flex;
             align-items: center;
             justify-content: center;
           }
+
+          &__button.vm-button_small {
+            width: 22px;
+            height: 22px;
+            min-height: 22px;
+          }
         }
 
         &__key,
         &__value {
           vertical-align: top;
-          padding: calc($padding-small / 2) $padding-global;
+          line-height: $font-size;
+          padding: calc($padding-small / 2);
         }
 
         &__key {
